<resources>
    <string name="app_name">TraineeTest</string>
    <string name="some_error">Случилась какая-то ошибка :(\nПопробуем снова?</string>
    <string name="try_again">Попробовать</string>
    <string name="currency_list">Список криптовалют</string>
    <string name="usd">USD</string>
    <string name="eur">EUR</string>
    <string name="description">Описание</string>
    <string name="Categories">Категории</string>
    <string name="arrow_back">arrow back</string>
    <string name="refresh_error">Произошла ошибка при загрузке</string>
</resources>